fullscreen alignment issues seem fixed on desktop, and not interfering with normal view on mobile

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -717,11 +717,11 @@ background: lightgray;
 
 
 /*installation fullscreen hacks*/
-#installation {
+/* #installation {
     width: 100%;
     height: 100%;
-}
-#installation-svg {
+} */
+.isFullscreen {
     width: 100%;
     height: 100%;
 }
